# trans-cli-rs

./: CHANGELOG  Cargo.toml  README.md
fixtures/: test_config.toml
src/: app.rs  config.rs  lib.rs  main.rs  request.rs
src/backend/: baidu_trans.rs  mod.rs  youdao_trans.rs
